// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiple schemas with same table name 1 1`] = `
[
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class Test {
  id!: bigint;
  name?: string;
  created?: Date;
  test?: Ref<Test>;
  testCollection = new Collection<Test>(this);
}

export const TestSchema = defineEntity({
  class: Test,
  properties: {
    id: p.bigint().primary().autoincrement(false),
    name: p.string().length(-1).nullable(),
    created: p.datetime().nullable(),
    test: () => p.manyToOne(Test).ref().updateRule('cascade').nullable(),
    testCollection: () => p.oneToMany(Test).mappedBy('test'),
  },
});
",
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class Schema1Test {
  id!: bigint;
  name?: string;
  created?: Date;
  test?: Ref<Schema1Test>;
  schema1TestCollection = new Collection<Schema1Test>(this);
}

export const Schema1TestSchema = defineEntity({
  class: Schema1Test,
  tableName: 'test',
  schema: 'schema1',
  properties: {
    id: p.bigint().primary().autoincrement(false),
    name: p.string().length(-1).nullable(),
    created: p.datetime().nullable(),
    test: () => p.manyToOne(Schema1Test).ref().updateRule('cascade').nullable(),
    schema1TestCollection: () => p.oneToMany(Schema1Test).mappedBy('test'),
  },
});
",
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class Schema2Test {
  id!: bigint;
  name?: string;
  created?: Date;
  test?: Ref<Schema2Test>;
  schema2TestCollection = new Collection<Schema2Test>(this);
}

export const Schema2TestSchema = defineEntity({
  class: Schema2Test,
  tableName: 'test',
  schema: 'schema2',
  properties: {
    id: p.bigint().primary().autoincrement(false),
    name: p.string().length(-1).nullable(),
    created: p.datetime().nullable(),
    test: () => p.manyToOne(Schema2Test).ref().updateRule('cascade').nullable(),
    schema2TestCollection: () => p.oneToMany(Schema2Test).mappedBy('test'),
  },
});
",
]
`;

exports[`multiple schemas with same table name 2 1`] = `
[
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class PublicTest {
  id!: bigint;
  name?: string;
  created?: Date;
  test?: Ref<PublicTest>;
  publicTestCollection = new Collection<PublicTest>(this);
}

export const PublicTestSchema = defineEntity({
  class: PublicTest,
  tableName: 'test',
  properties: {
    id: p.bigint().primary().autoincrement(false),
    name: p.string().length(-1).nullable(),
    created: p.datetime().nullable(),
    test: () => p.manyToOne(PublicTest).ref().updateRule('cascade').nullable(),
    publicTestCollection: () => p.oneToMany(PublicTest).mappedBy('test'),
  },
});
",
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class Schema1Test {
  id!: bigint;
  name?: string;
  created?: Date;
  test?: Ref<Schema1Test>;
  schema1TestCollection = new Collection<Schema1Test>(this);
}

export const Schema1TestSchema = defineEntity({
  class: Schema1Test,
  tableName: 'test',
  schema: 'schema1',
  properties: {
    id: p.bigint().primary().autoincrement(false),
    name: p.string().length(-1).nullable(),
    created: p.datetime().nullable(),
    test: () => p.manyToOne(Schema1Test).ref().updateRule('cascade').nullable(),
    schema1TestCollection: () => p.oneToMany(Schema1Test).mappedBy('test'),
  },
});
",
  "import { Collection, type Ref, defineEntity, p } from '@mikro-orm/core';

export class Schema2Test {
  id!: bigint;
  name?: string;
  created?: Date;
  test?: Ref<Schema2Test>;
  schema2TestCollection = new Collection<Schema2Test>(this);
}

export const Schema2TestSchema = defineEntity({
  class: Schema2Test,
  tableName: 'test',
  schema: 'schema2',
  properties: {
    id: p.bigint().primary().autoincrement(false),
    name: p.string().length(-1).nullable(),
    created: p.datetime().nullable(),
    test: () => p.manyToOne(Schema2Test).ref().updateRule('cascade').nullable(),
    schema2TestCollection: () => p.oneToMany(Schema2Test).mappedBy('test'),
  },
});
",
]
`;
